# octave-wagtail-styleguide

./: MANIFEST.in  README.md  pyproject.toml
octave_styleguide/: __init__.py  apps.py  settings.py  urls.py  utils.py  views.py
octave_styleguide/templates/: styleguide_base.html
octave_styleguide/templates/styleguide/: colors.html  icons.html  typography.html
octave_styleguide/templates/tags/: styleguide_menu.html
octave_styleguide/templatetags/: octave_styleguide_tags.py
