[tool.poetry]
name = "octave-styleguide"
version = "1.0.3"
description = "Easily add shortcut icons to any wagtail site."
authors = ["Pat Horsley <pat@octave.nz>"]
readme = 'README.md'
license = "BSD"

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
